--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "0.1.6",
     "expo": "~37.0.3",
     "firebase": "^7.13.2",
     "react": "~16.9.0",
@@ -16,13 +17,13 @@
     "react-native-firebase": "^5.6.0",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-gifted-chat": "^0.13.0",
+    "react-native-paper": "^3.9.0",
+    "react-native-reanimated": "~1.7.0",
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.3.7",
-    "react-navigation-stack": "^2.3.11",
-    "react-native-reanimated": "~1.7.0",
-    "@react-native-community/masked-view": "0.1.6"
+    "react-navigation-stack": "^2.3.11"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.1.0",
